--- a/frontend/src/pages/profile/Profile.css
+++ b/frontend/src/pages/profile/Profile.css
@@ -56,3 +56,13 @@
     border-radius: 20px;
     margin-bottom: 20px;
 }
+
+#logoutIcon {
+    text-decoration: none;
+    color: black;
+    font-size: 2.1rem;
+}
+
+#logoutButton {
+    background-color: #8BBABB;
+}
