--- a/frontend/src/pages/prescriptions/Prescriptions.css
+++ b/frontend/src/pages/prescriptions/Prescriptions.css
@@ -17,10 +17,14 @@
 .prescription--buttons {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .prescriptions--prescriptions {
-    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 20px;
 }
 
 #search {
@@ -40,12 +44,19 @@
     color: black;
 }
 
-#logoutIcon {
-    text-decoration: none;
-    color: black;
-    font-size: 2.1rem;
-}
+#logoutIcon {}
 
 #logoutButton {
+    /* background-color: #8BBABB; */
+    background-color: black;
+}
+
+#addPrescriptionButton {
     background-color: #8BBABB;
+    padding: 10px 30px;
+    align-self: center;
+    border-radius: 20px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 15px;
 }
